# file_sync_s3

./: .travis.yml  README.md  readme.md  requirements.txt  setup.cfg  tox.ini
src/main/file_sync_s3/: aws_s3.py  config.py  logster.py  service.py  setup.py  watcher.py
src/main/file_sync_s3/etc/: readme.md
src/main/file_sync_s3/etc/file_sync_s3/: arkon.ini
src/main/file_sync_s3/etc/init.d/: file_sync_s3  readme.md
src/main/file_sync_s3/etc/systemd/: readme.md
src/main/file_sync_s3/etc/systemd/system/: file_sync_s3.service
src/test/file_sync_s3_test/: __init__.py  config_test.py  logster_test.py  service_main.py  setup_main.py  setup_test.py  watcher_main.py  watcher_test.py
tool/: github_squash.py  install_local.py  perform_tox.py  provision_env.sh  release_update.py
