[metadata]

name = file_sync_s3
version = 0.2.4

requires-python = >=3.8

author = Andrei Pozolotin
author-email = andrei.pozolotin@gmail.com

summary = Amazon AWS S3 file sync service with inotify watchdog and scheduled expiration

description-file = readme.md
description-content-type = text/markdown; charset=UTF-8

home-page = https://github.com/random-python/file_sync_s3

license = Apache-2

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: System :: Systems Administration
    Topic :: Terminals
    Topic :: Utilities
    

keywords =
    openrc
    systemd
    service
    inotify
    expire
    file
    sync
    amazon
    aws
    s3

[files]

[options]    

packages =
    file_sync_s3
    file_sync_s3_test
    
package_dir = 
    file_sync_s3      = src/main/file_sync_s3
    file_sync_s3_test = src/test/file_sync_s3_test

[entry_points]

console_scripts =
# expose services for openrc/systemd
    file_sync_s3_install    = file_sync_s3.setup:service_install
    file_sync_s3_uninstall  = file_sync_s3.setup:service_uninstall
    file_sync_s3_service    = file_sync_s3.service:service_main
    
[pbr]

warnerrors = True
skip_authors = True
skip_git_sdist = False
skip_changelog = True
